--- a/inventory_management/inventory/templates/inventory/dashboard.html
+++ b/inventory_management/inventory/templates/inventory/dashboard.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-10 col-12 mx-auto mt-5">
             <div class="d-flex justify-content-end">
-                <a href="#" class="btn btn-primary">+</a>
+                <a href="{% url 'add-item' %}"class="btn btn-primary">+</a>
             </div>
             <table class="table table-hover table-striped">
                 <thead>
@@ -35,8 +35,8 @@
                         <td>{{ item.nome }}</td>
                         <td>{{ item.quantidade }}</td>
                         <td>{{ item.categoria.nome }}</td>
-                        <td></td>
-                        <td></td>
+                        <td><a href="{% url 'edit-item' item.id %}" class="btn btn-outline-secondary">Editar</a></td>
+                        <td><a href="{% url 'delete-item' item.id%}" class="btn btn-secondary">Deletar</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
